<update>[Projeto]: Ajustes na API
